<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.archer.badtaste.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/desc1"
        app:srcCompat="@drawable/film_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/unameField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/passwdField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_android_black_24dp"
        android:ems="10"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwdField"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:layout_marginBottom="130dp"
        android:layout_alignBottom="@+id/loginBtn"
        android:layout_alignLeft="@+id/unameField"
        android:layout_alignStart="@+id/unameField" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/signBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:fontFamily="monospace"
        android:onClick="loginUser"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="9pt">

    </Button>

    <TextView
        android:id="@+id/signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:onClick="signUser"
        android:text="@string/register"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:contentDescription="@string/desc2"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:contentDescription="@string/desc3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:contentDescription="@string/desc4"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>
</RelativeLayout>
