<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.archer.badtaste.LoginActivity">

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:textColor="#fff"
        android:layout_marginStart="37dp"
        android:layout_marginTop="26dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailView"
        android:textColorHint="#676767"
        android:layout_alignStart="@+id/emailView"
        android:layout_below="@+id/emailView"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:textColor="#fff"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/emailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailField"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/emailField"
        android:layout_toRightOf="@+id/emailField"
        android:onClick="sendEmailBack"
        android:text="@string/emailBtn" />
</RelativeLayout>