<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textAlignment="center"
    android:weightSum="1">

    <ImageView
        android:id="@+id/posterView"
        android:layout_width="154dp"
        android:layout_height="231dp"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/gradient" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="163dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/movieid" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="22dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="21dp"
            android:text="@string/genre" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="2.5"
            android:stepSize="0.1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/idView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/ratingBar"
            android:layout_alignStart="@+id/ratingBar"
            android:text="TextView"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/genresView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ratingBar"
            android:layout_alignEnd="@+id/ratingBar"
            android:layout_alignLeft="@+id/titleView"
            android:layout_alignRight="@+id/ratingBar"
            android:layout_alignStart="@+id/titleView"
            android:text="TextView"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignEnd="@+id/ratingBar"
            android:layout_alignLeft="@+id/idView"
            android:layout_alignRight="@+id/ratingBar"
            android:layout_alignStart="@+id/idView"
            android:text="TextView"
            android:textSize="17sp" />
    </RelativeLayout>
</LinearLayout>